# slamtools

./: CMakeLists.txt  LICENSE
include/slamtools/: bundle_adjustor.h  common.h  configurator.h  essential.h  factor.h  frame.h  homography.h  initializer.h  lie_algebra.h  pnp.h  preintegrator.h  random.h  ransac.h  sliding_window.h  state.h  stereo.h  track.h
src/slamtools/: bundle_adjustor.cpp  configurator.cpp  essential.cpp  factor.cpp  frame.cpp  homography.cpp  initializer.cpp  lie_algebra.cpp  pnp.cpp  preintegrator.cpp  sliding_window.cpp  stereo.cpp  track.cpp
src/slamtools/ceres/: lie_algebra_eigen_quaternion_parameterization.h  preintegration_error_cost.h  reprojection_error_cost.h
